--- a/.github/workflows/buildMipsel.yml
+++ b/.github/workflows/buildMipsel.yml
@@ -15,13 +15,9 @@ jobs:
           - name: Checkout source
             uses: actions/checkout@v4
     
-          - name: Update System
-            run: |
-              sudo apt-get update
-              sudo apt-get upgrade -y
-    
           - name: Install dependencies
             run: |
+              sudo apt-get update
               sudo apt-get install -y build-essential git
     
           - name: Download musl installer
@@ -36,7 +32,7 @@ jobs:
     
           - name: Install toolchain
             run: |
-              sudo make Install
+              sudo make install
     
           - name: Configure kernel
             run: |
