Fix toolchain installation step by adding missing directory change

--- a/.github/workflows/buildMipsel.yml
+++ b/.github/workflows/buildMipsel.yml
@@ -32,6 +32,7 @@ jobs:
     
           - name: Install toolchain
             run: |
+              cd musl-cross-make
               sudo make install
     
           - name: Configure kernel
