--- a/.github/workflows/buildArmel.yml
+++ b/.github/workflows/buildArmel.yml
@@ -9,7 +9,7 @@ on:
     workflow_dispatch:
 
 jobs:
-      build-mipsel:
+      build-armel:
         runs-on: ubuntu-latest
         steps:
           - name: Checkout source
