--- a/.github/workflows/buildKernel.yml
+++ b/.github/workflows/buildKernel.yml
@@ -52,7 +52,7 @@ jobs:
           - name: Upload kernel artifact
             uses: actions/upload-artifact@v4
             with:
-              name: kernel-mipsel
+              name: kernel-mipsel-${{ github.run_id }}
               path: kernel-mipsel.tar.gz
 
               
@@ -93,17 +93,66 @@ jobs:
             run: |
               make ARCH=arm CROSS_COMPILE=/opt/cross/arm-linux-musleabi/bin/arm-linux-musleabi- O=./build/armel zImage -j$(nproc)
 
-          - name: Rename zImage to zImage.armel
-            run: |
-              cp build/armel/arch/arm/boot/zImage zImage.armel
-
           - name: Archive kernel
             run: |
-              tar -czf kernel-armel.tar.gz -C zImage.armel
+              tar -czf kernel-armel.tar.gz -C ./build/armel/arch/arm/boot/ zImage
               echo "Kernel archive created: kernel-armel.tar.gz"
 
           - name: Upload kernel artifact
             uses: actions/upload-artifact@v4
             with:
-              name: kernel-armel
+              name: kernel-armel-${{ github.run_id }}
               path: kernel-armel.tar.gz
+
+      publish:
+        runs-on: ubuntu-latest
+        needs: [build-mipsel, build-armel]
+        steps:
+          - name: Checkout source
+            uses: actions/checkout@v4
+
+          - name: Download artifacts
+            uses: actions/download-artifact@v4
+            with:
+              name: kernel-mipsel-${{ github.run_id }}
+              path: ./artifacts/mipsel
+
+          - name: Download artifacts
+            uses: actions/download-artifact@v4
+            with:
+              name: kernel-armel-${{ github.run_id }}
+              path: ./artifacts/armel
+          
+          - name: Get Latest Release Version
+            id: get_version
+            run: |
+              if git describe --tags --abbrev=0 >/dev/null 2>&1; then
+              version=$(git describe --tags --abbrev=0)
+              else
+              version="0.0"
+              fi
+              echo "version=$version" >> $GITHUB_ENV
+
+          - name: Bump minor version
+            id: bump_version
+            run: |
+              latest="${{ env.version }}"
+              base=${latest%.*}
+              minor=${latest##*.}
+              new_minor=$((minor + 1))
+              new_version="$base.$new_minor"
+              echo "new_version=$new_version" >> $GITHUB_ENV
+              git tag "$new_version"
+              git push origin "$new_version"
+
+          - name: Publish new release
+            uses: softprops/action-gh-release@v1
+            with:
+              tag_name: ${{ env.new_version }}
+              name: "Kernel Release ${{ env.new_version }}"
+              files: |
+                ./artifacts/mipsel/kernel-mipsel.tar.gz
+                ./artifacts/armel/kernel-armel.tar.gz
+            env:
+              GITHUB_TOKEN: ${{ secrets.KERNEL_BUILD_TOKEN }}
+              GITHUB_REPOSITORY: ${{ github.repository }}
