--- a/.github/workflows/buildKernel.yml
+++ b/.github/workflows/buildKernel.yml
@@ -28,7 +28,7 @@ jobs:
             run: |
               cd musl-cross-make
               cp ../musl.config.mipsel ./config.mak
-              make
+              make -j$(nproc)
     
           - name: Install toolchain
             run: |
@@ -74,7 +74,7 @@ jobs:
             run: |
               cd musl-cross-make
               cp ../musl.config.mipseb ./config.mak
-              make 
+              make -j$(nproc)
     
           - name: Install toolchain
             run: |
@@ -120,7 +120,7 @@ jobs:
             run: |            
               cd musl-cross-make
               cp ../musl.config.armel ./config.mak
-              make
+              make -j$(nproc)
 
           - name: Install toolchain
             run: |
