--- a/.github/workflows/buildKernel.yml
+++ b/.github/workflows/buildKernel.yml
@@ -180,7 +180,7 @@ jobs:
           - name: Download armel zImage artifacts
             uses: actions/download-artifact@v4
             with:
-              name: kernel-armel-zImage${{ github.run_id }}
+              name: kernel-armel-zImage-${{ github.run_id }}
               path: ./artifacts/armel
             
           - name: Download armel vmlinux artifacts
